--- a/Dashboard/Areas/AccountSubscriptionEntity/Views/AccountSubscription/Filter.cshtml
+++ b/Dashboard/Areas/AccountSubscriptionEntity/Views/AccountSubscription/Filter.cshtml
@@ -33,6 +33,20 @@
                         </select>
                     </div>
                 </div>
+                
+                <div class="col-md-6 col-12">
+                    <div class="mb-1">
+                        <label asp-for="CreatedAtFrom" class="form-label"></label>
+                        <input type="date" asp-for="CreatedAtFrom" class="form-control">
+                    </div>
+                </div>
+                
+                <div class="col-md-6 col-12">
+                    <div class="mb-1">
+                        <label asp-for="CreatedAtTo" class="form-label"></label>
+                        <input type="date" asp-for="CreatedAtTo" class="form-control">
+                    </div>
+                </div>
 
             </div>
             <hr />
