--- a/Dashboard/Areas/TeamEntity/Views/Team/Profile.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Team/Profile.cshtml
@@ -72,15 +72,20 @@
                                                         </a>
                                                     </li>
                                                     <li class="nav-item ">
-                                                        <a id="/SeasonEntity/TeamGameWeak/Index/?Fk_Home=@Model.Id&ProfileLayOut=true" class="nav-link tab-item   @(returnItem==(int)TeamProfileItems.HomeTeamGameWeak ? "active" : "")">
-                                                            <span class="fw-bold">@Html.DisplayNameFor(model => profileItem.HomeGameWeaks)</span>
+                                                        <a id="/SeasonEntity/TeamGameWeak/Index/?Fk_Team=@Model.Id&ProfileLayOut=true" class="nav-link tab-item   @(returnItem==(int)TeamProfileItems.TeamGameWeak ? "active" : "")">
+                                                            <span class="fw-bold">@Localizer.Get("TeamGameWeaks")</span>
                                                         </a>
                                                     </li>
-                                                    <li class="nav-item ">
-                                                        <a id="/SeasonEntity/TeamGameWeak/Index/?Fk_Away=@Model.Id&ProfileLayOut=true" class="nav-link tab-item   @(returnItem==(int)TeamProfileItems.AwayTeamGameWeak ? "active" : "")">
-                                                            <span class="fw-bold">@Html.DisplayNameFor(model => profileItem.AwayGameWeaks)</span>
-                                                        </a>
-                                                    </li>
+                                                    @* <li class="nav-item "> *@
+                                                    @*     <a id="/SeasonEntity/TeamGameWeak/Index/?Fk_Home=@Model.Id&ProfileLayOut=true" class="nav-link tab-item   @(returnItem==(int)TeamProfileItems.HomeTeamGameWeak ? "active" : "")"> *@
+                                                    @*         <span class="fw-bold">@Html.DisplayNameFor(model => profileItem.HomeGameWeaks)</span> *@
+                                                    @*     </a> *@
+                                                    @* </li> *@
+                                                    @* <li class="nav-item "> *@
+                                                    @*     <a id="/SeasonEntity/TeamGameWeak/Index/?Fk_Away=@Model.Id&ProfileLayOut=true" class="nav-link tab-item   @(returnItem==(int)TeamProfileItems.AwayTeamGameWeak ? "active" : "")"> *@
+                                                    @*         <span class="fw-bold">@Html.DisplayNameFor(model => profileItem.AwayGameWeaks)</span> *@
+                                                    @*     </a> *@
+                                                    @* </li> *@
 
 
 
