--- a/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Index.cshtml
@@ -127,6 +127,7 @@
                         data: function(data) {
                           data.Fk_Country = $("#Fk_Country").length >  0 ?$("#Fk_Country").val() : @Model.Fk_Country;
                             data.Fk_Nationality = $("#Fk_Nationality").length > 0 ? $("#Fk_Nationality").val() : @Model.Fk_Nationality;
+                            data.Fk_Subscription = $("#Fk_Subscription").length > 0 ? $("#Fk_Subscription").val() : @Model.Fk_Subscription;
                             data.Fk_FavouriteTeam = $("#Fk_Country").length > 0 ? $("#Fk_FavouriteTeam").val() : @Model.Fk_FavouriteTeam;
                             data.AccountUserName = $("#AccountUserName").length > 0 ? $("#AccountUserName").val() : '@Model.AccountUserName';
                             data.AccountFullName = $("#AccountFullName").length > 0 ? $("#AccountFullName").val() : '@Model.AccountFullName';
