--- a/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Index.cshtml
+++ b/Dashboard/Areas/SeasonEntity/Views/TeamGameWeak/Index.cshtml
@@ -75,7 +75,7 @@
                                                 <th>
                                                     @Html.DisplayNameFor(model => row.Id)
 
-                                                    <a id="details" asp-action="Details">
+                                                    <a id="profile" asp-action="Profile">
                                                     </a>
 
                                                     @if (accessLevel.CreateAccess)
@@ -141,7 +141,7 @@ else
                                                 <th>
                                                     @Html.DisplayNameFor(model => row.Id)
 
-                                                    <a id="details" asp-action="Details">
+                                                    <a id="profile" asp-action="Profile">
                                                     </a>
 
                                                 </th>
