--- a/Dashboard/Areas/TeamEntity/Views/Team/Details.cshtml
+++ b/Dashboard/Areas/TeamEntity/Views/Team/Details.cshtml
@@ -18,6 +18,9 @@
 
                     <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.ShortName):</dt>
                     <dd class="col-sm-8 mb-1">@Model.ShortName</dd>
+                    
+                    <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.IsAwayTeam):</dt>
+                    <dd class="col-sm-8 mb-1">@Model.IsAwayTeam</dd>
 
                 </dl>
             </div>
@@ -26,7 +29,8 @@
                     <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model._365_TeamId):</dt>
                     <dd class="col-sm-8 mb-1">@Model._365_TeamId</dd>
 
-                   
+                   <dt class="col-sm-4 fw-bolder mb-1">@Html.DisplayNameFor(model => model.IsActive):</dt>
+                    <dd class="col-sm-8 mb-1">@Model.IsActive</dd>
                 </dl>
             </div>
         </div>
