--- a/Dashboard/Areas/AccountEntity/Views/Account/Profile.cshtml
+++ b/Dashboard/Areas/AccountEntity/Views/Account/Profile.cshtml
@@ -33,13 +33,13 @@
                     <div class="col-12">
                         <div class="card profile-header mb-2">
                             <!-- profile cover photo -->
-                            <img class="card-img-top" height="400" src="~/coverImg.jpg" alt="cover">
+                            <img class="card-img-top" height="150" src="~/coverImg.png" alt="">
                             <!--/ profile cover photo -->
                             <div class="position-relative">
                                 <!-- profile picture -->
                                 <div class="profile-img-container d-flex align-items-center">
                                     <div class="profile-img">
-                                        <img src="@Model.ImageUrl" class="rounded img-fluid" alt="image">
+                                        <img src="@Model.ImageUrl" class="rounded img-fluid" alt="">
                                     </div>
                                     <!-- profile title -->
                                     <div class="profile-title ms-3">
